--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-helmet": "^5.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0"
   },
@@ -14,7 +15,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "references":[
+  "references": [
     "https://medium.com/@pshrmn/a-simple-react-router-v4-tutorial-7f23ff27adf",
     "https://reacttraining.com/react-router/web/api/Route/render-func",
     "http://learnlayout.com/inline-block-layout.html",
